--- a/app/assets/stylesheets/administrate/components/_navigation.scss
+++ b/app/assets/stylesheets/administrate/components/_navigation.scss
@@ -12,7 +12,7 @@
   font-size: $font-size-default;
   font-weight: $font-weight-medium;
   height: 100%;
-  justify-content: flex-start;
+  justify-content: flex-left;
   left: 0;
   margin: 0;
   overflow: auto;
