--- a/app/javascript/dashboard/assets/scss/widgets/_conv-header.scss
+++ b/app/javascript/dashboard/assets/scss/widgets/_conv-header.scss
@@ -44,10 +44,10 @@ $resolve-button-width: 13.2rem;
 
 
     .user--profile__meta {
-      align-items: flex-start;
+      align-items: flex-left;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
+      justify-content: flex-left;
       margin-left: $space-slab;
       min-width: 0;
     }
@@ -60,9 +60,9 @@ $resolve-button-width: 13.2rem;
   display: flex;
   flex-direction: row;
   flex-grow: 1;
-  justify-content: flex-end;
+  justify-content: flex-right;
 
   &.has-open-sidebar {
-    justify-content: flex-end;
+    justify-content: flex-right;
   }
 }
