--- a/app/javascript/dashboard/assets/scss/widgets/_modal.scss
+++ b/app/javascript/dashboard/assets/scss/widgets/_modal.scss
@@ -85,7 +85,7 @@
 
   .modal-footer {
     @include flex;
-    @include flex-align($x: flex-left, $y: middle);
+    @include flex-align($x: flex-start, $y: middle);
     padding: $space-small $zero;
 
     button {
